# tprstats-python

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  env.yaml  pixi.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
docs/: Makefile  binary_choice_models.ipynb  conf.py  example.ipynb  formula.ipynb  getting_started.ipynb  index.md  linear_models.ipynb  make.bat  models.ipynb  plots.ipynb
docs/_build/html/: .buildinfo  changelog.html  formula.html  genindex.html  getting_started.html  index.html  models.html  objects.inv  plots.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/tprstats/: experimental_design.html  fit_distribution.html  hypothesis_test.html  models.html  plots.html
docs/_build/html/_sources/: index.md.txt  models.ipynb.txt  plots.ipynb.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/tprstats/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/tprstats/: index.html
docs/_build/html/autoapi/tprstats/experimental_design/: index.html
docs/_build/html/autoapi/tprstats/fit_distribution/: index.html
docs/_build/html/autoapi/tprstats/models/: index.html
docs/examples/notebooks/: control_charts.ipynb  linear_models.ipynb
examples/notebooks/: binary_choice_models.ipynb  control_charts.ipynb  linear_models.ipynb  logit.ipynb  models.ipynb  plot.ipynb
notebooks/: arima.ipynb  coef_cov.ipynb  confidence_intervals.ipynb  fit_distributions.ipynb  go_3d_plot.ipynb  hist_CI.ipynb  hypothesis_test.ipynb  jupyter.ipynb  jupyter_magic_commands.ipynb  plot_3D.ipynb  plot_actual_fitted.ipynb  prediction.ipynb  regression_tests.ipynb  robust_std_errors.ipynb  sarimax.ipynb  scaled_coefficients.ipynb  testing_difference_in_means.ipynb  wald.ipynb  wald_test.ipynb
src/tprstats/: __init__.py  control_charts.py  experimental_design.py  fit_distribution.py  hello.py  hypothesis_test.py  model_wrapper.py  models.py  plot.py  plots.py  regression.py
src/tprstats/rport/: regression.py
tests/: test_tprstats.py
(+7 files in other folders)
