[project]
name = "tprstats"
version = "0.1.0"
description = "Statistical recipes, methods and applications for students at the Tepper School of Business."
authors = [
    {name = "Dennis Epple", email = "epple@cmu.edu"}, 
    {name = "Stephen Epple", email = "sepple@alumni.cmu.edu"}, 
    ]
requires-python = ">= 3.10"
dependencies = ["pandas", "statsmodels"]

[tool.hatch.build.targets.wheel]
packages = ["src/tprstats"]

[tool.ruff]
target-version = "py310"
extend-exclude = ["docs/*"]
fix = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"