[project]
name = "tprstats"
version = "0.1.0"
description = "Statistical recipes, methods and applications for students at the Tepper School of Business."
authors = [
    {name = "Dennis Epple", email = "epple@cmu.edu"}, 
    {name = "Stephen Epple", email = "sepple@alumni.cmu.edu"}, 
    ]
requires-python = ">= 3.10"
dependencies = [
    "pandas (>=2.2.3,<3)",
    "statsmodels (>=0.14.4,<0.15)",
    "formulaic (>=1.1.1,<2)",
    "scipy (>=1.15.1,<2)",
    "numpy (>=2.2.2,<3)",
    "matplotlib (>=3.9.2,<4)"
    ]

[tool.hatch.build.targets.wheel]
packages = ["src/tprstats"]

[tool.ruff]
target-version = "py310"
extend-exclude = ["docs/*"]
fix = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"